<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.gracothayrondev</groupId>
	<artifactId>jsweet-maven-plugin</artifactId>
	<version>3.1.1-java21</version>
	<packaging>maven-plugin</packaging>
	<name>JSweet Maven Plugin Custom</name>
	<description>JSweet Maven Plugin com transpiler customizado para Java 21</description>

	<properties>
		<java.version>21</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<repositories>
		<!-- JitPack para o seu transpiler customizado -->
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.jsweet</groupId>
			<artifactId>jsweet-core</artifactId>
			<version>6.3.0</version>
		</dependency>

		<!-- Seu transpiler customizado -->
		<dependency>
			<groupId>com.github.gracothayrondev</groupId>
			<artifactId>transpiler</artifactId>
			<version>3.1.1-java21</version>
		</dependency>

		<!-- Candy Big.js -->
		<dependency>
			<groupId>org.jsweet.candies.ext</groupId>
			<artifactId>bigjs</artifactId>
			<version>0.0.0-SNAPSHOT</version>
		</dependency>

		<!-- Maven Plugin API e compatibilidade -->
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-plugin-api</artifactId>
			<version>3.9.9</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-core</artifactId>
			<version>3.9.9</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.maven.plugin-tools</groupId>
			<artifactId>maven-plugin-annotations</artifactId>
			<version>3.13.1</version>
			<scope>provided</scope>
		</dependency>

		<!-- Commons utilitário -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.12.0</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!-- Compilador Java -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<release>${java.version}</release>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>

			<!-- Maven Plugin Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-plugin-plugin</artifactId>
				<version>3.13.1</version>
				<configuration>
					<goalPrefix>jsweet</goalPrefix>
					<skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
				</configuration>
				<executions>
					<execution>
						<id>default-descriptor</id>
						<goals>
							<goal>descriptor</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Source Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.4.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Javadoc Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.4.1</version>
				<configuration>
					<source>${java.version}</source>
					<encoding>${project.build.sourceEncoding}</encoding>
					<failOnError>false</failOnError>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
